--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   color: #ffffff;
 padding: 10px;
 }
+/* Game Display */
 #game {
   max-width: 500px;
   max-height: 400px;
@@ -17,16 +18,21 @@ padding: 10px;
   margin-right: auto;
   padding: 10px;
 }
+/* Controls Display */
 #controls, #stats {
     border: 1px solid #0a0a23;
     color: #0a0a23;
     padding: 5px;
 }
-
+/* monsterStats display*/
 #monsterStats {
   display: none;
   border: 1px solid #0a0a23;
   padding: 5px;
   color: #ffffff;
   background-color: #c70d0d;
+}
+
+.stat {
+  padding-right: 10px;
 }
